# CorentinDupont-WebPage

./: .gitignore  .gitmodules  CorentinDupont-WebPage.cabal  Dockerfile  LICENSE  README.md  WebPage.cabal  docker-compose.yml  index.html  stack.yaml
blog/: Africa.md  contact.md  index.html  recommendations.md
blog/css/: base.css  layout.css
blog/drafts/: .2016-09-09-Humans-Special.md.swp  .2016-12-14-Haskell-structure.md.swp  .2017-05-01-Design.md.swp  .2017-07-25-Zurihac.md.swp  .2017-09-30-Zurihac.md.swp  .2018-11-03-API.md.swp  .2019-01-01-Homosexuality.md.swp  2013-11-26-first-Nomyx-tutorial.markdown  2014-01-16-Aliens.md  2014-03-07-Religion-Self.md  2014-04-25-VM-Placement.md  2014-05-16-Crash-pad.md  2014-07-21-Math-Structure.md  2014-08-30-Time.md  2014-12-19-Data-Migration.md  2014-12-22-2DTime.md  2015-01-28-Dimensions.md  2015-01-30-Light.md  2015-03-10-Mattress.md  2015-03-17-Math-reality.md  2015-09-03-Einstein.md  2015-09-14-diagrams.md  2015-09-17-Nomyx-applicative.md  2015-10-03-Mattress.md  2016-09-07-Simulation.md  2016-09-09-Humans-Special.md  2017-02-16-CEP.md  2017-05-01-Design.md  2017-11-20-Revo.md  2018-11-03-API.md  2018-11-04-Selfish-genes.md  2019-01-01-Homosexuality.md  2021-04-04-TimeTravel.md  2021-04-04-TimeTravel2.md  NomyxLanguage.md
blog/pages/: contact.md  links.md  recommendations.md
blog/posts/: 2013-12-15-Intro-to-Godel-Theorem.md  2013-12-20-Latex-Beamer-R-Inkscape-GIT.md  2013-12-30-vision.md  2014-01-06-pipes-machines-IOT.markdown  2014-01-16-Aliens.md  2014-01-30-DSL-Effect.lhs  2014-02-12-Effect-Class.lhs  2014-02-17-Cretan-Maze.lhs  2014-03-19-Haskell-Presentation.lhs  2014-04-07-Religion-Self.md  2014-04-25-VM-Placement.md  2014-07-21-Math-Structure.md  2014-09-23-Nomyx-Language.md  2014-09-23-first-Nomyx-tutorial.md  2014-12-08-Car.Rmd  2014-12-08-Car.md  2014-12-10-This-Blog.md  2015-01-27-Parallel-Prog.md  2015-01-28-Dimensions.md  2016-01-05-vim-tmux.md  knit.sh
blog/posts/Cosmology/: 2014-01-16-Aliens.md  2014-04-07-Religion-Self.md  2014-07-21-Math-Structure.md  2015-01-28-Dimensions.md  2015-02-02-Comprehensible.md  2015-03-10-Mattress.md  2015-05-01-LightSpeed.md  2015-05-18-Life3D.md  2015-09-03-Einstein.md  2019-09-28-Design.md  (+9 more)
blog/templates/: mainperso.html  post.html  posts.html
blurbs/: Africa.md  DIY.md  haskell.md  presentation.md  research-overview.md  software.md
css/: base.css  footer.less  main.less  navbar.less  pubs.less
docs/: ISCIS11.txt
haskell/: Main.hs
images/: dimmatic.xcf
js/: scripts.js
news/: 2013-06-13-test.md  2013-09-01-dc4cities-started.md  2013-11-01-test.md  2014-01-21-PhD-research-proposal-accepted.md  2014-06-07-Zurihac.md  2014-06-10-E2DC2014.md  2014-08-22-Ad-Hoc.md  2014-10-23-DC4Cities-review.md  2015-01-26-BigDat.md  2015-05-25-Haskell-CN.md  2015-09-01-DC4Cities-review2.md  2015-09-07-ICT4S.md  2015-09-13-UCC.md  2015-09-21-DC4Cities-Video.md  2015-10-30-Hackathon.md  2015-10-30-Summer-School.md  2016-02-02-Waziup-KOM.md  2016-03-20-Thesis.md  2016-04-28-Exam.md  2016-12-16-CloudCom.md  2018-04-20-WaziHub-KOM.md  2019-01-01-WaziupeV.md  2021-12-01-Hubiquitous.md
pages/: about.md  index.html  index.html~  industry.md  inline.csl  legal.md  publications.html  publications.md  research.md  stuff.md
pagesPerso/: contact.md  index.html
pagesPro/: index.html  industry.md  legal.md  research.md
posts/: 2012-12-15-Intro-to-Godel-Theorem.md
projects/: nomyx.md
proxy/: docker-compose.yml  nginx.conf
research/: projects.md
src/: Main.hs
templates/: blog.html  footer.html  head.html  left-menu-blog.html  main.html  mainperso.html  navbar.html  news.html  post-list.html  post.html
(+37 files in other folders)
