name: CorentinDupont-WebPage
version: 1.0
cabal-version: >=1.8
build-type: Simple
license: OtherLicense
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
homepage: http://corentin.dupont.info
synopsis: My web page.
description: Statically generates my academic web page.
             Depends on the `lessc` tool for generating CSS: http://lesscss.org/
category: Web
author: Corentin Dupont
data-dir: ""
 
executable site
    build-depends: base ==4.*, 
                   blaze-html == 0.7.*, 
                   filepath == 1.3.*,
                   hakyll == 4.5.*, 
                   pandoc == 1.13.*,
                   containers == 0.5.*,
                   hakyll-R -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: haskell
    other-modules: WebPage.Generate
                   WebPage.Generate.Base
                   WebPage.Generate.Rules
                   WebPage.Generate.Context
 
