name: CorentinDupont-WebPage
version: 1.0
cabal-version: >=1.8
build-type: Simple
license: OtherLicense
license-file: LICENSE
maintainer: corentin.dupont@gmail.com
homepage: http://corentin.dupont.info
synopsis: My web page.
description: Statically generates my academic web page.
             Depends on the `lessc` tool for generating CSS: http://lesscss.org/
category: Web
author: Corentin Dupont
data-dir: ""

executable site
    build-depends: base       == 4.*,
                   blaze-html -any,
                   filepath   -any,
                   hakyll     == 4.13.*,
                   pandoc     -any,
                   containers -any,
                   R-pandoc   -any,
                   -- diagrams-pandoc -any,
                   -- diagrams   -any,
                   SVGFonts   -any

    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
